[package]
name = "eggersmann_app_server_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="*", features=['json'] }
serde = { version = "*", features = ["derive"] }
azure_security_keyvault = "*"
azure_identity = "*"
jsonwebtoken = "*"
reqwest = { version = "*", features = ["cookies", "blocking", "json", "rustls-tls"] }
serde_json = "*"
playwright = "*"
chrono = "*"
rand = "*"
sha2 = "*"
url = "*"