[package]
name = "eggersmann_app_server_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5", features=['json'] }
serde = { version = "1.0", features = ["derive"] }
azure_security_keyvault = "0.20"
azure_identity = "0.20"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["cookies", "blocking", "json", "rustls-tls"] }
serde_json = "1.0"
playwright = "0.0"
chrono = "0.4"
rand = "0.8"
sha2 = "0"
url = "2"